syntax = "proto2";

package com.google.sps.protoc;

option java_outer_classname = "CloseRoomProtoc";

message CloseRoomRequest {
  required string roomId = 1;
}

message CloseRoomResponse {
  required string roomId = 1;
  required uint64 timestamp = 2;
}
